--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+	Applied some suggested code changes from PEVANS, which among other things have cleaned up the transport handling and TLS upgrade.
 
 0.001     2010-12-29 02:31:57 Europe/London
 	Initial release to CPAN.
