Perl5.8 compilation fixes and IO::Async minimum version bump to 0.36
git-svn-id: http://entitymodel.com/svn/trunk/Net-Async-IMAP@558 c5bf8c3b-bf20-4ed3-b413-d5547a49f493

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+	Support perl5.8 and update IO::Async minimum version required to 0.36 since we're relying on LineStream now.
 
 0.002     2011-01-05 03:07:40 Europe/London
 	Applied some suggested code changes from PEVANS, which among other things have cleaned up the transport handling and TLS upgrade.
